--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -17,3 +17,5 @@ spec:
           image: fastermikeazure.azurecr.io/fastermiketest
           ports:
           - containerPort: 80
+          command: [ "/bin/bash", "-c", "--" ]
+          args: [ "while true; do sleep 30; done;" ]
