--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
     environment: 'FasterMiketestdelete.default'
-    steps:
+#    steps:
     - bash: az account set --subscription 1a28a519-15da-405e-86c2-4d7c830ff792
 
     - bash: az aks get-credentials --resource-group AARGMiha1 --name AAKMiha1
