--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -58,17 +58,15 @@ stages:
       runOnce:
         deploy:
           steps:
-#  - bash: az login --service-principal -u '09f9e6c1-cfe9-412f-a93c-7c044683c9f7' -p '6hza~k-f2XQ8P401WnZ-8RdU~N2mBMB~d_' --tenant '1c962577-9b3a-4d16-a4a9-eff280f52f4c'
-#    displayName: 'Login into Azure'
+          - bash: az login -u 'fast3r.mike@gmail.com' -p 'L3tsr0ck!!'
+            displayName: 'Login into Azure'
 
 
-#  - bash: az aks get-credentials --resource-group AARGMiha1 --name AAAKMiha1  --subscription '1a28a519-15da-405e-86c2-4d7c830ff792'
+          - bash: az aks get-credentials --resource-group AARGMiha1 --name AAAKMiha1
+            displayName: 'Login into AKS cluster'
 
-#    displayName: 'Login into AKS cluster'
-
-#  - bash: kubectl set image deployment $(deployment) $(deployment)=$(AzureContainerRegistryNProd).azurecr.io/$(imageName):$(Build.SourceVersion)-$(repotag)-latest -n dicr
- 
-#    displayName: 'Deploy new docker-image'
+          - bash: kubectl set image deployment/fastermiketest fastermiketest=fastermiketest:$(tag)-latest --record
+            displayName: 'Deploy new docker-image'
 
 
 
@@ -100,22 +98,22 @@ stages:
 
 
 
-          - task: KubernetesManifest@0
-            displayName: Create imagePullSecret
-            inputs:
-              action: createSecret
-              secretName: $(imagePullSecret)
-              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+#          - task: KubernetesManifest@0
+#            displayName: Create imagePullSecret
+#            inputs:
+#              action: createSecret
+#              secretName: $(imagePullSecret)
+#              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
               
-          - task: KubernetesManifest@0
-            displayName: Deploy to Kubernetes cluster
-            inputs:
-              action: deploy
-              manifests: |
-                $(Pipeline.Workspace)/manifests/deployment.yml
-                $(Pipeline.Workspace)/manifests/service.yml
-              imagePullSecrets: |
-                $(imagePullSecret)
-              containers: |
-                $(containerRegistry)/$(imageRepository):$(tag)
+#          - task: KubernetesManifest@0
+#            displayName: Deploy to Kubernetes cluster
+#            inputs:
+#              action: deploy
+#              manifests: |
+#                $(Pipeline.Workspace)/manifests/deployment.yml
+#                $(Pipeline.Workspace)/manifests/service.yml
+#              imagePullSecrets: |
+#                $(imagePullSecret)
+#              containers: |
+#                $(containerRegistry)/$(imageRepository):$(tag)
 
